--- a/web/projects.html
+++ b/web/projects.html
@@ -21,11 +21,9 @@
                         <p2>Ski Resort Vistors Distribution System Management</p2>
                         <ul>
                             <li>Implemented a multithreaded Java client using a dynamic thread pool management strategy to support high data upload and server load management, achieving a maximum throughput of 4500 requests per second for processing 200,000 requests.</li>
-                            <li>Integrated multiple error handling mechanisms on the server side, and collected multithreaded operational metrics on the client side for continuous improvement of system performance visibility.</li>
-                            <li>Incorporated RabbitMQ as a messaging queue to optimize data transmission and storage processes, enhancing system processing power and data consistency while ensuring efficient message consumption with low latency.</li>
-                            <li>Achieved service scalability through AWS Elastic Load Balancing to ensure service reliability and effective load distribution.</li>
+                            <li>xxxxxxxx</li>
+                            <li>xxxxxxxx</li>
                         </ul>
-                        
                     </div>
 
                     <!-- project1 pic -->
