--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html>
    <head>
     <title>Jingwen's website</title>
-    <!-- 外部css渲染样式链接 -->
+
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/navbar.css">
+
    </head>
 
    <body>
     <!-- Nav Bar -->
     <nav class="navbar">
+        <div class="navbar-title">Jingwen's Website</div>
         <ul class="nav-table">
             <li><a href="web/projects.html">Projects</a></li>
             <li><a href="web/interests.html">Interests</a> </li>
@@ -15,7 +18,7 @@
         </ul>
     </nav>
 
-    <!-- 首页照片 -->
+    <div class="content">
         <div class="profile-container">
             <div class="img-div">
                 <img class="profile-img" src="pics/profile_img.jpg">
@@ -25,7 +28,6 @@
                 <p>A software developer, based in <span class="location">Seattle</span>.</p>
             </div>
         </div>
-
-        <div></div>
+    </div>
    </body>
 </html>
