--- a/web/contact.html
+++ b/web/contact.html
@@ -2,21 +2,32 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/contact.css">
+    <link rel="stylesheet" type="text/css" href="../css/navbar.css">
 </head>
 <body>
+    <!-- Nav Bar -->
     <nav class="navbar">
+        <div class="navbar-title">Jingwen's Website</div>
         <ul class="nav-table">
-            <li><a href="../index.html">Back</a></li>
+            <li><a href="../index.html">Main Page</a> </li>
+            <li><a href="projects.html">Projects</a></li
+            <li><a href="interests.html">Interests</a> </li>
+            <li><a href="contact.html" class="active">Contact Me</a></li>
         </ul>
     </nav>
-    <div class="contact-title">
-        Get in Touch
+
+    <div class="content">
+        <div class="contact-title">
+            Get in Touch
+        </div>
+    
+        <div class="contact-info">
+            <p>Email: hou.jingw@northeastern.edu</p>
+            <p>GitHub: xxxxxx</p>
+            <p>LinkedIn: xxxxxx</p>
+            <p>Instagram: xxxxxx</p>
+        </div>
     </div>
-    <div class="contact-info">
-        <p>Email: hou.jingw@northeastern.edu</p>
-        <p>GitHub: xxxxxx</p>
-        <p>LinkedIn: xxxxxx</p>
-        <p>Instagram: xxxxxx</p>
-    </div>
+
 </body>
 </html>
