--- a/contact/index.html
+++ b/contact/index.html
@@ -9,10 +9,10 @@
     <nav class="navbar">
         <div class="navbar-title">Jingwen's Website</div>
         <ul class="nav-table">
-            <li><a href="../index.html">Main Page</a> </li>
-            <li><a href="projects.html">Projects</a></li
-            <li><a href="interests.html">Interests</a> </li>
-            <li><a href="contact.html" class="active">Contact Me</a></li>
+            <li><a href="../">Main Page</a> </li>
+            <li><a href="/projects/">Projects</a></li>
+            <li><a href="/interests/">Interests</a> </li>
+            <li><a href="/contact/" class="active">Contact Me</a></li>
         </ul>
     </nav>
 
