--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav class="navbar">
         <div class="navbar-title">Jingwen's Website</div>
         <ul class="nav-table">
-            <li><a href="web/projects.html">Projects</a></li>
-            <li><a href="web/interests.html">Interests</a> </li>
-            <li><a href="web/contact.html">Contact Me</a></li>
+            <li><a href="/projects/">Projects</a></li>
+            <li><a href="/interests/">Interests</a> </li>
+            <li><a href="/contact/">Contact Me</a></li>
         </ul>
     </nav>
 
