--- a/interests/index.html
+++ b/interests/index.html
@@ -9,10 +9,10 @@
         <nav class="navbar">
             <div class="navbar-title">Jingwen's Website</div>
             <ul class="nav-table">
-                <li><a href="../index.html">Main Page</a> </li>
-                <li><a href="projects.html">Projects</a></li
-                <li><a href="interests.html" class="active">Interests</a> </li>
-                <li><a href="contact.html">Contact Me</a></li>
+                <li><a href="../">Main Page</a> </li>
+                <li><a href="/projects/">Projects</a></li
+                <li><a href="/interests/" class="active">Interests</a> </li>
+                <li><a href="/contact/">Contact Me</a></li>
             </ul>
         </nav>
         
