--- a/projects/index.html
+++ b/projects/index.html
@@ -10,10 +10,10 @@
         <nav class="navbar">
             <div class="navbar-title">Jingwen's Website</div>
             <ul class="nav-table">
-                <li><a href="../index.html">Main Page</a> </li>
-                <li><a href="projects.html" class="active">Projects</a></li
-                <li><a href="interests.html">Interests</a> </li>
-                <li><a href="contact.html">Contact Me</a></li>
+                <li><a href="../">Main Page</a> </li>
+                <li><a href="/projects/" class="active">Projects</a></li
+                <li><a href="/interests/">Interests</a> </li>
+                <li><a href="/contact/">Contact Me</a></li>
             </ul>
         </nav>
 
